--- a/assets/css/footer.scss
+++ b/assets/css/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  padding: 40px 20px;
+  padding: 80px 50px;
   flex-grow: 0;
   color: var(--color-secondary);
 
@@ -9,6 +9,7 @@
     justify-content: space-between;
     margin: 0 auto;
     width: 760px;
+    height: 50px;
     max-width: 100%;
 
     @media ($tablet) {
