--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -17,12 +17,10 @@
   <div class="posts">
     {{ range $paginator.Pages }}
     <article class="post on-list">
-      <h1 class="post-title"><a href="{{ .Permalink }}">{{ .Title | markdownify }}</a></h1>
+      <h1 class="post-title">{{ .Title | markdownify }}</h1>
       <div class="post-meta">
         {{ if .Date }}
-          <time class="post-date">
-            {{ .Date.Format ($.Site.Params.DateFormatList | default "2006-01-02") }}
-          </time>
+        
 
           {{ if $.Site.Params.LastModDisplay }}
             {{ partial "lastmod.html" . }}
@@ -50,20 +48,16 @@
         {{ partial "postcover.html" . }}
       {{ end }}
 
-      <div class="post-content">
-        {{ with .Description }}
-          {{ . | markdownify }}
-        {{ else }}
-          {{ if .Truncated }}
-            {{ .Summary }}
-          {{ end }}
-        {{ end }}
-      </div>
-      {{ if not .Params.hideReadMore }}
-        <div><a class="read-more button" href="{{.RelPermalink}}">{{ $.Site.Params.ReadMore | default "Read more" }} →</a></div>
+
+      {{ if .Content }}
+      <div class="content">{{ .Content }}</div>
       {{ end }}
+
     </article>
     {{ end }}
-    {{ partial "pagination.html" . }}
+ 
   </div>
+
+
+
 {{ end }}
