--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -13,8 +13,7 @@
 
       <div class="copyright">
         <span
-          >© {{ now.Year }} galle0n · Powered by the
-          <a href="https://github.com/panr/hugo-theme-hello-friend" target="_blank" rel="noopener">Hello Friend</a> theme for <a href="https://gohugo.io/" target="_blank" rel="noopener">Hugo</a>
+          >© 2022 - {{ now.Year }} galle0n
         </span>
 
         </div>
