--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -18,6 +18,48 @@
     {{ range $paginator.Pages }}
     <article class="post on-list">
       <h1 class="post-title">{{ .Title | markdownify }}</h1>
+      
+      <div class="container">
+        <div class="post-container">
+          <div class="image-container">
+            <img src="homepage/images/ship2.jpg" class="circular-image">   
+          </div>  
+         
+            <h1 class="post-title">{{ .Title | markdownify }}</h1>  
+        </div>
+  
+        <style>
+          .container {
+            display:flex;
+            justify-content: center;
+          }
+          .post-container {
+            align-items: center;
+            justify-content: center;
+            max-width: 600px;
+            margin: 0 auto;
+          }
+          .image-container {
+            width: 220px;
+            height: 220px;
+            border-radius: 100%;
+            overflow: hidden;
+            margin-bottom: -70px;
+            position: relative;
+          }
+          .circular-image {
+            width: 220px;
+            height: auto;
+            justify-content: center;
+          }
+          .post-title {
+            margin-bottom: -30px;
+            text-decoration: underline;
+          }
+        </style>
+      </div>  
+  
+
       <div class="post-meta">
         {{ if .Date }}
         
